codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Provider
  Switch chat provider and model.

› 1. OpenAI (current)  Uses Codewith or OpenAI login
  2. OpenRouter        openrouter

  Press enter to confirm or esc to go back
