codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pull_request_overview_open.snap
---
source: tui/src/chatwidget/tests/pull_request_display.rs
expression: "render_bottom_popup(&chat, 120)"
---
  2 open PRs

  Current  [Open]

  Search PRs
› Refresh                               Reload pull requests
  #42 Add native pull request overview  Open | by hasna | open-pr-overview -> main | 1 pending/4 checks | review Appr…
  #51 Harden PR follow-up actions       Draft | by reviewer | approval-gated-pr-actions -> main | 1 failing/3 checks …

  Read-only: no comments, reviews, pushes, branch updates, merges, or auto-fix actions.
  Press enter to confirm or esc to go back
