codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__schedule_actions_popup.snap
---
source: tui/src/chatwidget/tests/loop_menu.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Schedule sch_paused
  paused · once · next 2023-11-14 22:18 · tz UTC · failure streak 2 failures

› 1. Run now                 Queue this prompt immediately
  2. Edit prompt             Change the prompt used on future runs
  3. Stats                   Show run counts and latest outcomes
  4. Resume                  Start scheduling future runs again
  5. Delete                  Remove this schedule and any nested child loops from the thread
  6. Back to schedules       Return to all scheduled prompts

  Press enter to confirm or esc to go back
